compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__update_multi_variant_record.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1795
expression: "\npub type Point {\n  Point2(a: Int, b: Int)\n  Point3(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  Point3(..Point2(a: 1, b: 2))\n}"
---
error: Unsafe record update
  ┌─ /src/one/two.gleam:8:3
  │
8 │   Point3(..Point2(a: 1, b: 2))
  │   ^^^^^^ I can't tell this is always the right constructor

This type has multiple constructors so it cannot be safely updated.
If this value was one of the other variants then the update would be
produce incorrect results.

Consider pattern matching on it with a case expression and then
constructing a new record with its values.

